# VERS

./: Cargo.toml  README.md
src/: lib.rs  main.rs
vers_macro/: Cargo.toml
vers_macro/src/: lib.rs
