[package]
name = "vers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vers"
path = "src/lib.rs"

[[bin]]
name = "VΣRS"
path = "src/main.rs"

[dependencies]
unicode-ident = "1.0.8"
vers_macro = { path = "./vers_macro" }
